tests/snapshots/dbc-cantools/motohawk_use_round.snap
---
source: tests/snapshots.rs
---
version: "1.0"
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - PCM1
  - FOO
messages:
  - id:
      Standard: 496
    name: ExampleMessage
    size: 8
    transmitter: PCM1
    signals:
      - name: Temperature
        multiplexer_indicator: Plain
        start_bit: 0
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 0.01
        offset: 250
        min:
          Double: 229.52
        max:
          Double: 270.47
        unit: degK
        receivers:
          - PCM1
          - FOO
      - name: AverageRadius
        multiplexer_indicator: Plain
        start_bit: 6
        size: 6
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 5
        unit: m
      - name: Enable
        multiplexer_indicator: Plain
        start_bit: 7
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: "-"
comments:
  - Message:
      id:
        Standard: 496
      comment: Example message used as template in MotoHawk models.
attribute_definitions:
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 65535
attribute_defaults:
  - name: GenMsgCycleTime
    value:
      Uint: 0
value_descriptions:
  - Signal:
      message_id:
        Standard: 496
      name: Enable
      value_descriptions:
        - id: 0
          description: Disabled
        - id: 1
          description: Enabled
