tests/snapshots/dbc-cantools/multiplex_2.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Extended: 201522942
    name: Shared
    size: 8
    transmitter: ~
    signals:
      - name: S2
        multiplexer_indicator:
          MultiplexedSignal: 2
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S1
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 4
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S0
        multiplexer_indicator: Multiplexor
        start_bit: 0
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Extended: 201457406
    name: Normal
    size: 8
    transmitter: ~
    signals:
      - name: S2
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S1
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 4
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S0
        multiplexer_indicator: Multiplexor
        start_bit: 0
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Extended: 201391870
    name: Extended
    size: 8
    transmitter: ~
    signals:
      - name: S8
        multiplexer_indicator:
          MultiplexedSignal: 2
        start_bit: 40
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S7
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 40
        size: 24
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S6
        multiplexer_indicator: Multiplexor
        start_bit: 32
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S5
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 4
        size: 28
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S4
        multiplexer_indicator:
          MultiplexedSignal: 2
        start_bit: 8
        size: 24
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S3
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 16
        size: 16
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S2
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 8
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S1
        multiplexer_indicator:
          MultiplexorAndMultiplexedSignal: 0
        start_bit: 4
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S0
        multiplexer_indicator: Multiplexor
        start_bit: 0
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Extended: 201588478
    name: ExtendedTypes
    size: 8
    transmitter: ~
    signals:
      - name: S9
        multiplexer_indicator:
          MultiplexedSignal: 5
        start_bit: 24
        size: 32
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Double: -1.34
        max:
          Uint: 1235
        unit: ""
      - name: S10
        multiplexer_indicator:
          MultiplexedSignal: 0
        start_bit: 16
        size: 32
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Double: -340000000000000000000000000000000000000
        max:
          Double: 340000000000000000000000000000000000000
        unit: ""
      - name: S0
        multiplexer_indicator:
          MultiplexorAndMultiplexedSignal: 3
        start_bit: 8
        size: 4
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: S11
        multiplexer_indicator: Multiplexor
        start_bit: 0
        size: 5
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 2
        max:
          Uint: 6
        unit: ""
attribute_definitions:
  - Message:
      - TpJ1939VarDlc
      - Enum:
          - "No"
          - "Yes"
  - Signal:
      - SigType
      - Enum:
          - Default
          - Range
          - RangeSigned
          - ASCII
          - Discrete
          - Control
          - ReferencePGN
          - DTC
          - StringDelimiter
          - StringLength
          - StringLengthControl
          - MessageCounter
          - MessageChecksum
  - Signal:
      - GenSigEVName
      - String
  - Signal:
      - GenSigILSupport
      - Enum:
          - "No"
          - "Yes"
  - Signal:
      - GenSigSendType
      - Enum:
          - Cyclic
          - OnWrite
          - OnWriteWithRepetition
          - OnChange
          - OnChangeWithRepetition
          - IfActive
          - IfActiveWithRepetition
          - NoSigSendType
  - Message:
      - GenMsgFastOnStart
      - Int:
          - Uint: 0
          - Uint: 100000
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgCycleTimeFast
      - Int:
          - Uint: 0
          - Uint: 3600000
  - Message:
      - GenMsgNrOfRepetition
      - Int:
          - Uint: 0
          - Uint: 1000000
  - Signal:
      - GenSigStartValue
      - Int:
          - Uint: 0
          - Uint: 2147483647
  - Message:
      - GenMsgDelayTime
      - Int:
          - Uint: 0
          - Uint: 1000
  - Message:
      - GenMsgILSupport
      - Enum:
          - "No"
          - "Yes"
  - Message:
      - GenMsgStartDelayTime
      - Int:
          - Uint: 0
          - Uint: 100000
  - Node:
      - NodeLayerModules
      - String
  - Node:
      - ECU
      - String
  - Node:
      - NmJ1939SystemInstance
      - Int:
          - Uint: 0
          - Uint: 15
  - Node:
      - NmJ1939System
      - Int:
          - Uint: 0
          - Uint: 127
  - Node:
      - NmJ1939ManufacturerCode
      - Int:
          - Uint: 0
          - Uint: 2047
  - Node:
      - NmJ1939IndustryGroup
      - Int:
          - Uint: 0
          - Uint: 7
  - Node:
      - NmJ1939IdentityNumber
      - Int:
          - Uint: 0
          - Uint: 2097151
  - Node:
      - NmJ1939FunctionInstance
      - Int:
          - Uint: 0
          - Uint: 7
  - Node:
      - NmJ1939Function
      - Int:
          - Uint: 0
          - Uint: 255
  - Node:
      - NmJ1939ECUInstance
      - Int:
          - Uint: 0
          - Uint: 3
  - Node:
      - NmJ1939AAC
      - Int:
          - Uint: 0
          - Uint: 1
  - Node:
      - NmStationAddress
      - Int:
          - Uint: 0
          - Uint: 255
  - Message:
      - GenMsgSendType
      - Enum:
          - cyclic
          - NotUsed
          - IfActive
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - noMsgSendType
  - Message:
      - GenMsgRequestable
      - Int:
          - Uint: 0
          - Uint: 1
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 3600000
  - Signal:
      - SPN
      - Int:
          - Uint: 0
          - Uint: 524287
  - Plain:
      - DBName
      - String
  - Plain:
      - BusType
      - String
  - Plain:
      - ProtocolType
      - String
  - Message:
      - VFrameFormat
      - Enum:
          - StandardCAN
          - ExtendedCAN
          - reserved
          - J1939PG
attribute_defaults:
  - name: TpJ1939VarDlc
    value:
      String: "No"
  - name: SigType
    value:
      String: Default
  - name: GenSigEVName
    value:
      String: Env@Nodename_@Signame
  - name: GenSigILSupport
    value:
      String: "Yes"
  - name: GenSigSendType
    value:
      String: NoSigSendType
  - name: GenMsgFastOnStart
    value:
      Uint: 0
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: GenMsgCycleTimeFast
    value:
      Uint: 0
  - name: GenMsgNrOfRepetition
    value:
      Uint: 0
  - name: GenSigStartValue
    value:
      Uint: 0
  - name: GenMsgDelayTime
    value:
      Uint: 0
  - name: GenMsgILSupport
    value:
      String: "Yes"
  - name: GenMsgStartDelayTime
    value:
      Uint: 0
  - name: NodeLayerModules
    value:
      String: ""
  - name: ECU
    value:
      String: ""
  - name: NmJ1939SystemInstance
    value:
      Uint: 0
  - name: NmJ1939System
    value:
      Uint: 0
  - name: NmJ1939ManufacturerCode
    value:
      Uint: 0
  - name: NmJ1939IndustryGroup
    value:
      Uint: 0
  - name: NmJ1939IdentityNumber
    value:
      Uint: 0
  - name: NmJ1939FunctionInstance
    value:
      Uint: 0
  - name: NmJ1939Function
    value:
      Uint: 0
  - name: NmJ1939ECUInstance
    value:
      Uint: 0
  - name: NmJ1939AAC
    value:
      Uint: 0
  - name: NmStationAddress
    value:
      Uint: 254
  - name: GenMsgSendType
    value:
      String: noMsgSendType
  - name: GenMsgRequestable
    value:
      Uint: 1
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: SPN
    value:
      Uint: 0
  - name: DBName
    value:
      String: ""
  - name: BusType
    value:
      String: CAN
  - name: ProtocolType
    value:
      String: J1939
  - name: VFrameFormat
    value:
      String: J1939PG
attribute_values_database:
  - name: DBName
    value:
      String: foo
attribute_values_message:
  - name: VFrameFormat
    message_id:
      Extended: 201588478
    value:
      Uint: 3
  - name: VFrameFormat
    message_id:
      Extended: 201522942
    value:
      Uint: 3
  - name: VFrameFormat
    message_id:
      Extended: 201457406
    value:
      Uint: 3
  - name: VFrameFormat
    message_id:
      Extended: 201391870
    value:
      Uint: 3
attribute_values_signal:
  - name: GenSigStartValue
    message_id:
      Extended: 201588478
    signal_name: S11
    value:
      Uint: 2
signal_extended_value_type_list:
  - message_id:
      Extended: 201588478
    signal_name: S9
    signal_extended_value_type: IEEEfloat32Bit
  - message_id:
      Extended: 201588478
    signal_name: S10
    signal_extended_value_type: IEEEfloat32Bit
extended_multiplex:
  - message_id:
      Extended: 201588478
    signal_name: S9
    multiplexor_signal_name: S11
    mappings:
      - min_value: 5
        max_value: 5
  - message_id:
      Extended: 201588478
    signal_name: S10
    multiplexor_signal_name: S0
    mappings:
      - min_value: 0
        max_value: 0
  - message_id:
      Extended: 201588478
    signal_name: S0
    multiplexor_signal_name: S11
    mappings:
      - min_value: 3
        max_value: 3
  - message_id:
      Extended: 201522942
    signal_name: S2
    multiplexor_signal_name: S0
    mappings:
      - min_value: 2
        max_value: 5
  - message_id:
      Extended: 201522942
    signal_name: S1
    multiplexor_signal_name: S0
    mappings:
      - min_value: 1
        max_value: 1
      - min_value: 3
        max_value: 3
  - message_id:
      Extended: 201391870
    signal_name: S8
    multiplexor_signal_name: S6
    mappings:
      - min_value: 2
        max_value: 2
  - message_id:
      Extended: 201391870
    signal_name: S7
    multiplexor_signal_name: S6
    mappings:
      - min_value: 1
        max_value: 1
  - message_id:
      Extended: 201391870
    signal_name: S5
    multiplexor_signal_name: S0
    mappings:
      - min_value: 1
        max_value: 1
  - message_id:
      Extended: 201391870
    signal_name: S4
    multiplexor_signal_name: S1
    mappings:
      - min_value: 2
        max_value: 2
  - message_id:
      Extended: 201391870
    signal_name: S3
    multiplexor_signal_name: S1
    mappings:
      - min_value: 0
        max_value: 0
  - message_id:
      Extended: 201391870
    signal_name: S2
    multiplexor_signal_name: S1
    mappings:
      - min_value: 0
        max_value: 0
  - message_id:
      Extended: 201391870
    signal_name: S1
    multiplexor_signal_name: S0
    mappings:
      - min_value: 0
        max_value: 0
